// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-timeline.vue > Demo-交替展示 1`] = `
<div>
  <ul class="root">
    <li class="root left" color="blue">
      <div class="label" vusion-slot-name="label">
      </div>
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 2020-01-20 注册
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root right" color="blue">
      <div class="label" vusion-slot-name="label">
      </div>
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 2020-01-21 验证
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root left" color="blue">
      <div class="label" vusion-slot-name="label">
      </div>
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 2020-01-22 审核
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root right" color="blue">
      <div class="label" vusion-slot-name="label">
      </div>
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 2020-01-23 修改
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root left" color="blue">
      <div class="label" vusion-slot-name="label">
      </div>
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 2020-01-24 完成
        <span vusion-slot-name="item"></span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`u-timeline.vue > Demo-使用label单独展示时间 1`] = `
<ul class="root">
  <li class="root right" color="blue">
    <div class="label" vusion-slot-name="label">
      2020-01-20
    </div>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default"> 服务测试数据1 <div class="sub">这是一段测试文案1</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root right" color="blue">
    <div class="label" vusion-slot-name="label">
      2020-01-21
    </div>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default"> 服务测试数据2 <div class="sub">这是一段测试文案2</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root right" color="blue">
    <div class="label" vusion-slot-name="label">
      2020-01-22
    </div>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default"> 服务测试数据3 <div class="sub">这是一段测试文案3</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root right" color="blue">
    <div class="label" vusion-slot-name="label">
      2020-01-23
    </div>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default"> 服务测试数据4 <div class="sub">这是一段测试文案4</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root right" color="blue">
    <div class="label" vusion-slot-name="label">
      2020-01-24
    </div>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default"> 服务测试数据5 <div class="sub">这是一段测试文案5</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
</ul>
`;

exports[`u-timeline.vue > Demo-修改颜色 1`] = `
<ul class="root">
  <li class="root" color="black">
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: black;"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <div>black</div>
      <div class="time">2020-01-20</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="success">
    <div class="tail" uname="tail"></div>
    <div class="dot"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <div>success</div>
      <div class="time">2020-01-21</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="warning">
    <div class="tail" uname="tail"></div>
    <div class="dot"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <div>warning</div>
      <div class="time">2020-01-21</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="error">
    <div class="tail" uname="tail"></div>
    <div class="dot"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <div>error</div>
      <div class="time">2020-01-22</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="blue">
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <div>默认颜色: primary</div>
      <div class="time">2020-01-23</div>
      <span vusion-slot-name="item"></span>
    </div>
  </li>
</ul>
`;

exports[`u-timeline.vue > Demo-基本用法 1`] = `
<div>
  <ul class="root">
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">提交 2020-01-20
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">预审核 2020-01-21
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>权限 2020-01-22</div>
        <div>审批人：张三</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>财务 2020-01-22</div>
        <div>审批人：李四</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">完成
        <span vusion-slot-name="item"></span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`u-timeline.vue > Demo-幽灵节点 1`] = `
<div>
  <ul class="root" pending="true">
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>提交审批</div>
        <div>2020-01-20</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>验证通过</div>
        <div>2020-01-21</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>预审核通过</div>
        <div>2020-01-21</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 人工审核 <div>2020-01-22</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default"> 处理中 <div>2020-01-22</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`u-timeline.vue > Demo-普通用法 1`] = `
<ul class="root">
  <li class="root" color="blue" insource>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="blue" insource>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <span vusion-slot-name="item"></span>
    </div>
  </li>
  <li class="root" color="blue" insource>
    <div class="tail" uname="tail"></div>
    <div class="dot" style="border-color: blue;"></div>
    <div class="content" uname="content" vusion-slot-name="default">
      <span vusion-slot-name="item"></span>
    </div>
  </li>
</ul>
`;

exports[`u-timeline.vue > Demo-自定义图标 1`] = `
<div>
  <ul class="root">
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dotCustom">
        <div style="width: 0px; height: 0px; border: 8px solid transparent; border-top: 8px solid blue; position: relative; top: 4px;"></div>
      </div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>开始</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>处理中</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
    <li class="root" color="blue">
      <div class="tail" uname="tail"></div>
      <div class="dot" style="border-color: blue;"></div>
      <div class="content" uname="content" vusion-slot-name="default">
        <div>完成</div>
        <span vusion-slot-name="item"></span>
      </div>
    </li>
  </ul>
</div>
`;
